@@ -1,4 +1,4 @@
-function append(text, is_append) {
+function append(text, is_append, is_scroll_paused) {
     var div_msg = document.getElementById("messages");
     var entry = document.createElement("div");
     entry.innerHTML = text;
@@ -7,8 +7,17 @@ function append(text, is_append) {
         div_msg.appendChild(entry);
     } 
     else { // is_prepend
+        is_scroll_paused = is_scroll_paused || false;
+
         div_msg.insertBefore(entry, div_msg.childNodes[0]);
-        $(entry).hide().slideDown(300);
+
+        if (is_scroll_paused) {
+            var body = $('body');
+            body.scrollTop(body.scrollTop() + $(entry).height() + 10); 
+        }
+        else {
+            $(entry).hide().slideDown(300);
+        }
     }
 }
 
