@@ -1,3 +1,7 @@
+2012-02-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* gfeedline.js: Added auto control of scrolling in 'Twitter' mode.
+
 2012-02-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 1.0 beta 1 release.
